# channelz

./: .gitattributes  .gitignore  .gitmodules  CREDITS.html  CREDITS.md  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yaml  msrv.yaml
channelz/: Cargo.toml  build.rs
channelz/benches/: encode.rs
channelz/misc/: channelz.1  channelz.bash  help.txt
channelz/src/: enc.rs  encode.rs  ext.rs  lib.rs  main.rs  menu.rs
channelz_brotli/: Cargo.toml  README.md  build.rs
channelz_brotli/src/: ffi.rs  lib.rs
channelz_core/: Cargo.toml
channelz_core/benches/: encode.rs
channelz_core/src/: lib.rs
release/completions/: channelz.bash
release/man/: channelz.1
release/skel/: control
src/: abacus.rs  brotli.rs  enc.rs  err.rs  ext.rs  jobs.rs  main.rs
test/assets/: core.css  core.min.js  index.html
