[package]
name = "channelz"
version = "0.11.2"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
description = "Fast, multi-threaded static Gzip/Brotli encoding tool for the CLI."
repository = "https://github.com/Blobfolio/channelz"
readme = "./README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <josh@blobfolio.com>"
copyright = "2025, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["./LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "utils"
extended-description = """\
.\n\
Point ChannelZ toward a single file to generate maximally-compressed Brotli- and Gzip-encoded copies, or point it toward a directory to recursively handle many files en masse.\n\
.\n\
Only files with the following extensions will be looked at:\n\
appcache; atom; bmp; css; csv; doc(x); eot; geojson; htc; htm(l); ico; ics; js;\n\
json; jsonld; manifest; md; mjs; otf; pdf; rdf; rss; svg; ttf; txt; vcard; vcs;\n\
vtt; wasm; webmanifest; xhtm(l); xls(x); xml; xsl; y(a)ml"""
assets = [
    ["./target/release/channelz", "usr/bin/", "755"],
    ["./release/completions/channelz.bash", "etc/bash_completion.d/", "644"],
    ["./release/man/channelz.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "ChannelZ"
bash-dir = "./release/completions"
man-dir = "./release/man"

[[package.metadata.bashman.switches]]
long = "--clean"
description = "Remove all existing *.gz *.br files (of types ChannelZ would encode) before starting."

[[package.metadata.bashman.switches]]
long = "--clean-only"
description = "Same as --clean, but exit immediately afterward."

[[package.metadata.bashman.switches]]
long = "--force"
description = "Try to encode ALL files passed to ChannelZ, regardless of file extension (except those already ending in .br/.gz). Be careful with this!"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information and exit."

[[package.metadata.bashman.switches]]
long = "--no-br"
description = "Skip Brotli encoding."

[[package.metadata.bashman.switches]]
long = "--no-gz"
description = "Skip Gzip encoding."

[[package.metadata.bashman.switches]]
short = "-p"
long = "--progress"
description = "Show progress bar while minifying."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print version information and exit."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read (absolute) file and/or directory paths to compress from this text file — or STDIN if '-' — one entry per line, instead of or in addition to any trailing <PATH(S)>."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "One or more file and/or directory paths to compress and/or (recursively) crawl."

[[package.metadata.bashman.sections]]
name = "FILE TYPES"
inside = false
lines = [
	"Static copies will only be generated for files with these extensions:",
	"appcache; atom; bmp; css; csv; doc(x); eot; geojson; htc; htm(l); ico; ics; js;",
	"json; jsonld; manifest; md; mjs; otf; pdf; rdf; rss; svg; ttf; txt; vcard; vcs;",
	"vtt; wasm; webmanifest; xhtm(l); xls(x); xml; xsl; y(a)ml",
]

[build-dependencies]
argyle = "0.13.*"
dactyl = "0.13.*"

[dependencies]
crossbeam-channel = "=0.5.*"
dactyl = "0.13.*"
dowser = "0.15.*"
write_atomic = "0.7.*"

[dependencies.argyle]
version = "0.13.*"
features = [ "try_paths" ]

[dependencies.brotli]
version = "=8.0.1"
default-features = false
features = [ "std" ]

[dependencies.fyi_msg]
version = "2.3.*"
features = [ "signals" ]

[dependencies.libdeflater]
version = "=1.24.0"
features = [ "freestanding" ]

[profile.release]
lto = true
codegen-units = 1
strip = true
