[package]
name = "channelz"
version = "0.5.4"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.56"
description = "ChannelZ is a simple, fast, multi-threaded static Gzip/Brotli encoding tool for the CLI."
repository = "https://github.com/Blobfolio/channelz"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2021, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "utility"
extended-description = """\
.\n\
Point it toward a single file to generate maximally-compressed Brotli- and Gzip-encoded copies, or point it toward a directory to recursively handle many files en masse.\n \
.\n\
Only files with the following extensions will be looked at:\n\
atom; bmp; css; eot; (geo)json; htc; htm(l); ico; ics; js; manifest; md;\n\
mjs; otf; rdf; rss; svg; ttf; txt; vcard; vcs; vtt; wasm; xhtm(l); xml; xsl"""
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/channelz", "usr/bin/", "755"],
    ["../release/completions/channelz.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/channelz.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "ChannelZ"
bash-dir = "../release/completions"
man-dir = "../release/man"

[[package.metadata.bashman.switches]]
long = "--clean"
description = "Remove all existing *.gz *.br files before starting."

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information."

[[package.metadata.bashman.switches]]
short = "-p"
long = "--progress"
description = "Show progress bar while working."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read file paths from this text file."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "Any number of files and directories to crawl and crunch."

[[package.metadata.bashman.sections]]
name = "FILE TYPES"
inside = false
lines = [
	"Static copies will only be generated for files with these extensions:",
	"atom; bmp; css; eot; (geo)json; htc; htm(l); ico; ics; js; manifest; md;",
	"mjs; otf; rdf; rss; svg; ttf; txt; vcard; vcs; vtt; wasm; xhtm(l); xml; xsl",
]

[dependencies]
argyle = "0.5.*"
rayon = "1.5.*"

[dependencies.channelz_core]
path = "../channelz_core"

[dependencies.dowser]
version = "0.3.*"
features = [ "regexp" ]

[dependencies.fyi_msg]
version = "0.9.*"
features = [ "progress" ]
