[package]
name = "channelz"
version = "0.7.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.70"
description = "Fast, multi-threaded static Gzip/Brotli encoding tool for the CLI."
repository = "https://github.com/Blobfolio/channelz"
readme = "../README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2022, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["./LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "utils"
extended-description = """\
.\n\
Point ChannelZ toward a single file to generate maximally-compressed Brotli- and Gzip-encoded copies, or point it toward a directory to recursively handle many files en masse.\n\
.\n\
Only files with the following extensions will be looked at:\n\
appcache; atom; bmp; css; csv; doc(x); eot; geojson; htc; htm(l); ico; ics; js;\n\
json; jsonld; manifest; md; mjs; otf; pdf; rdf; rss; svg; ttf; txt; vcard; vcs;\n\
vtt; wasm; webmanifest; xhtm(l); xls(x); xml; xsl; y(a)ml"""
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/channelz", "usr/bin/", "755"],
    ["../release/completions/channelz.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/channelz.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "ChannelZ"
bash-dir = "../release/completions"
man-dir = "../release/man"
credits-dir = "../"

[[package.metadata.bashman.switches]]
long = "--clean"
description = "Remove all existing *.gz *.br files (of types ChannelZ would encode) before starting."

[[package.metadata.bashman.switches]]
long = "--clean-only"
description = "Same as --clean, but exit immediately afterward."

[[package.metadata.bashman.switches]]
long = "--force"
description = "Try to encode ALL files passed to ChannelZ, regardless of file extension (except those already ending in .br/.gz). Be careful with this!"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information and exit."

[[package.metadata.bashman.switches]]
short = "-p"
long = "--progress"
description = "Show progress bar while minifying."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print version information and exit."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read (absolute) file and/or directory paths from this text file, one entry per line."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "One or more file and/or directory paths to compress and/or (recursively) crawl."

[[package.metadata.bashman.sections]]
name = "FILE TYPES"
inside = false
lines = [
	"Static copies will only be generated for files with these extensions:",
	"appcache; atom; bmp; css; csv; doc(x); eot; geojson; htc; htm(l); ico; ics; js;",
	"json; jsonld; manifest; md; mjs; otf; pdf; rdf; rss; svg; ttf; txt; vcard; vcs;",
	"vtt; wasm; webmanifest; xhtm(l); xls(x); xml; xsl; y(a)ml",
]

[build-dependencies]
dactyl = "0.5.*"

[dependencies]
argyle = "0.6.*"
ctrlc = "=3.4.0"
dactyl = "0.5.*"
dowser = "0.8.*"
libdeflater = "=0.14.0"
rayon = "1.7.*"
write_atomic = "0.3.*"

[dependencies.channelz_brotli]
path = "../channelz_brotli"

[dependencies.fyi_msg]
version = "0.11.*"
features = [ "progress" ]
