[package]
name = "channelz_brotli"
version = "0.6.9"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.64"
description = "Brotli (C) compression for ChannelZ."
repository = "https://github.com/Blobfolio/channelz"
readme = "README.md"
include = [
	"build.rs",
	"Cargo.toml",
	"LICENSE",
	"README.md",
	"src",
	"vendor/c",
]

[build-dependencies]
cc = "1.0.*"
