[package]
name = "channelz_core"
version = "0.5.2"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "Library for ChannelZ."
repository = "https://github.com/Blobfolio/channelz"
publish = false

[dependencies]
libdeflater = "0.7.*"

[dependencies.compu]
version = "0.5.*"
default-features = false
features = [ "brotli-c" ]

[dev-dependencies]
brunch = "0.1.*"

[[bench]]
name = "encode"
harness = false
