[package]
name = "channelz_core"
version = "0.5.5"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.56"
description = "Library for ChannelZ."
repository = "https://github.com/Blobfolio/channelz"
publish = false

[dependencies]
libdeflater = "0.7.*"

[dependencies.compu]
version = "0.5.*"
default-features = false
features = [ "brotli-c" ]

[dev-dependencies]
brunch = "0.2.*"

[[bench]]
name = "encode"
harness = false
